--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "node": "22.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
